# clude

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
docs/: _headers  app.js  index.html  style.css  terminal.js
functions/api/: _middleware.js  env.js  fleet.js  log.js
src/clude/: __main__.py  cli.py
src/clude/commands/: env.py  fleet.py  log.py
src/clude/core/: git_ops.py  github_api.py  health.py  scanner.py
src/clude/utils/: console.py  dotenv.py
